--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 Title: Morenikeji Ewuola
 #Logo:
 Description: 
-Download: True
-Theme: pages.github.com/themes
+Download: False
+Theme: JEKYLL_THEME-MINIMA
