--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ Title: Morenikeji Ewuola
 Logo: PORTFOLIO PICT.jpeg
 Description: 
 Download: False
-Theme: JEKYLL_THEME-MINIMA
+Theme: Jekyll_Theme-Minima
